// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormBuilder component renders matches last snapshot 1`] = `
<div>
  <form
    novalidate=""
  >
    <div>
      <label>
        Name:
        <input
          name="name"
          type="text"
          value="Erhan"
        />
      </label>
    </div>
    <div>
      <label>
        Your Age:
        <input
          name="age"
          type="number"
          value="44"
        />
      </label>
    </div>
    <button
      class="submit-button"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`FormBuilder component renders validates form 1`] = `
<div>
  <form
    novalidate=""
  >
    <div>
      <label>
        Name:
        <input
          name="name"
          type="text"
          value="Erhan Gundogan"
        />
      </label>
    </div>
    <div>
      <label>
        Your Age:
        <input
          name="age"
          type="number"
          value="18"
        />
      </label>
    </div>
    <button
      class="submit-button"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
